# rust_practice

./: Cargo.toml
src/: hex.rs  lib.rs  main.rs  nim.rs
src/algebra/: expression.rs
src/astronomy/: units.rs
src/hex/: exhaust.rs  game.rs
src/io_utils/: input_parser.rs
