[package]
name = "rust_practice"
version = "0.1.0"
authors = ["matt <syan4@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#plotters = "^0.3.0"
#log = "^0.4"
csv = "^1.1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"